Fix off-center logo

--- a/park-city-express/styles/template.css
+++ b/park-city-express/styles/template.css
@@ -117,7 +117,7 @@ p {
 @media all and (max-width: 768px) {
 	#sidebar img {
 		max-width: 75%;
-		min-width: 300px;
+		min-width: 150px;
 		padding: 0 20px 25px 20px;
 	}
 }
